--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "hws2",
-  "homepage": "http://IgnatZakalinsky.github.io/hws2",
+  "homepage": "https://NeakhaiYauheni.github.io/hw_version2",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
@@ -15,8 +14,8 @@
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/uuid": "8.3.4",
-    "axios": "0.27.2",
-    "gh-pages": "4.0.0",
+    "axios": "^1.7.9",
+    "gh-pages": "^6.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
@@ -32,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "pnpm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
