--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "https://Neakhai.github.io/hw_version2",
+  "homepage": "https://beonezero.github.io/hw_version2",
   "version": "0.1.0",
   "dependencies": {
     "@emotion/react": "11.10.4",
